--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,11 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "axios": "^1.9.0",
     "nestjs-pino": "^4.4.0",
+    "pino": "^9.7.0",
     "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
