--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "axios": "^1.9.0",
+    "firebase-admin": "^13.4.0",
     "nestjs-pino": "^4.4.0",
     "pino": "^9.7.0",
     "pino-http": "^10.4.0",
